helm/parkos/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: parkos
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: parkos
            port:
              number: 8080
